# grpcpoke

./: .gitignore  README.md  build_offline_bundle.sh  pyproject.toml  selftest.py
examples/: example.methods.txt
grpc_poke/: __init__.py  channel.py  cli.py  client.py  codec.py  methods.py  result.py  store.py
